# ai-project-butler

./: .aider.chat.history.md  .aider.input.history  .gitignore  README.md  pyproject.toml  requirements.txt  目录结构
.aider.tags.cache.v4/: cache.db-shm  cache.db-wal
.env/: pyvenv.cfg
.env/Scripts/: activate  activate.bat
docs/: ARCHITECTURE.md  DATA_FLOW.md  FAILURE_HANDLING.md  MODULES.md  OBSERVABILITY.md
docs/diagrams/: architecture.mmd
src/: AGENTS.md  cli.py  config.py  logging_config.py  main.py  models.py  observability.py  project.py  scanner.py
src/analyzers/: __init__.py  base.py  file_types.py  markers.py  runner.py  todos.py
src/logging_utils/: __init__.py  formatters.py  logger.py
src/reporters/: execution.py  terminal.py
src/telemetry/: __init__.py  execution_report.py  timing.py
tests/: test_analyzers.py  test_logging_utils.py  test_main.py
