[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "project-butler"
version = "0.1.0"
description = "Scan a code project and print a lightweight analysis report."
requires-python = ">=3.10"
dependencies = [
    "typer==0.4.1",
    "rich==12.5.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.5",
]

[project.scripts]
project-butler = "cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
py-modules = [
    "cli",
    "config",
    "logging_config",
    "main",
    "models",
    "observability",
    "project",
    "scanner",
    "telemetry",
]
